--- a/src/main/resources/templates/frog/login.html
+++ b/src/main/resources/templates/frog/login.html
@@ -34,9 +34,15 @@
             </p>
             <input name="_csrf" type="hidden" value="08a9e14e-6883-4669-a96c-fbe70564f9a7"/>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        </form>
-    </main>
 
+        </form>
+
+
+    </main>
+    <div class="text-center">
+        <a class="d-block small mt-3" th:href="@{/signup}">Register an Account</a>
+
+    </div>
 
 </div>
 </body>
