--- a/src/main/resources/templates/frog/signup.html
+++ b/src/main/resources/templates/frog/signup.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <html>
 <head>
     <meta charset="utf-8">
@@ -10,11 +11,11 @@
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
 </head>
-<body>
+<body >
 <div class="container" text-align = "center">
-    <h1 class="form-signin-heading">Register Here</h2>
+    <h2 class="form-signin-heading">Register Here</h2>
     
-    <form class="form-signin" >
+    <form class="form-signin" th:action="@{/login}" method="post">
         
         <p>
             <label for="email" >Email</label>
@@ -39,27 +40,14 @@
             <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
         </p>
 
-        <p>
-            <label for = "type">Which of the following are you?</label>
-            <label class = "container">Customer
-            <input type = "checkbox" id = "Customer" >
-                <span class = "checkmark"></span>
-            </label>
 
-            <label class = "container">SuperFrog
-                <input type = "checkbox" id = "superfrog" >
-                    <span class = "checkmark"></span>
-                </label>
-
-            <label class = "container">Super Director
-                <input type = "checkbox" id = "superdirector" >
-                        <span class = "checkmark"></span>
-                </label>
-            
-        </p>
         <input name="_csrf" type="hidden" value="08a9e14e-6883-4669-a96c-fbe70564f9a7"/>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+
     </form>
+    <div class="text-center">
+        <a class="d-block small mt-3" th:href="@{/login}">Register an Account</a>
+
+    </div>
 </div>
 </body>
 </html>
