--- a/src/main/resources/templates/frog/home.html
+++ b/src/main/resources/templates/frog/home.html
@@ -31,9 +31,9 @@
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                </ul><a href="#">Schedule an Event</a>
+                </ul><a th:href="@{frog/new}">Schedule an Event</a>
                 <div sec:authorize="hasAuthority('admin')" class="container">
-                <a th:href="@{/superdirector_view}">&nbsp; SuperDirector Account </a></div>
+                <a th:href="@{frog/list}">&nbsp; SuperDirector Account </a></div>
                 <div sec:authorize="hasAuthority('user')" class="container">
                     <a th:href="@{/normal_user_view}">&nbsp; User Account </a></div>
                 <div sec:authorize="hasAuthority('frog')" class="container">
