--- a/src/main/resources/templates/frog/home.html
+++ b/src/main/resources/templates/frog/home.html
@@ -35,9 +35,9 @@
                 <div sec:authorize="hasAuthority('admin')" class="container">
                 <a th:href="@{frog/list}">&nbsp; SuperDirector Account </a></div>
                 <div sec:authorize="hasAuthority('user')" class="container">
-                    <a th:href="@{/normal_user_view}">&nbsp; User Account </a></div>
+                    <a th:href="@{frog/list}">&nbsp; User Account </a></div>
                 <div sec:authorize="hasAuthority('frog')" class="container">
-                    <a th:href="@{/superfrog_view}">&nbsp; Frog Account </a></div>
+                    <a th:href="@{frog/list}">&nbsp; Frog Account </a></div>
 
             </div>
     </nav>
