--- a/src/main/resources/templates/frog/home.html
+++ b/src/main/resources/templates/frog/home.html
@@ -14,33 +14,33 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
         <div class="container"><a class="navbar-brand logo" href="#">TCU SuperFrogs</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-
-            <div sec:authorize="hasAuthority('admin')">
-                This will only be displayed if authenticated user has role ROLE_ADMIN.
-            </div>
-            <div sec:authorize="hasAuthority('user')">
-                This will only be displayed if authenticated user has role ROLE_USER.
-            </div>
-            <div sec:authorize="hasAuthority('frog')">
-                This will only be displayed if authenticated user has role ROLE_FROG.
-            </div>
-            
-            <div class="collapse navbar-collapse"
-                id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                </ul><a th:href="@{frog/new}">Schedule an Event</a>
-                <div sec:authorize="hasAuthority('admin')" class="container">
-                <a th:href="@{frog/list}">&nbsp; SuperDirector Account </a></div>
-                <div sec:authorize="hasAuthority('user')" class="container">
-                    <a th:href="@{frog/list}">&nbsp; User Account </a></div>
-                <div sec:authorize="hasAuthority('frog')" class="container">
-                    <a th:href="@{frog/list}">&nbsp; Frog Account </a></div>
-
-            </div>
-    </nav>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{frog/new}">Schedule an Event</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{frog/list}">View Order</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="hasAuthority('admin')" href="#">Role: Admin</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="hasAuthority('user')" href="#">Role: User</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" sec:authorize="hasAuthority('frog')" href="#">Role: Frog</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
     <main class="page landing-page">
         <section class="clean-block clean-hero" style="background-image:url(&quot;assets/img/tech/image4.jpg&quot;);color:rgba(9, 162, 255, 0.85);">
             <div class="text">
@@ -98,7 +98,6 @@
         </section>
         <section class="clean-block about-us"></section>
     </main>
-    <span th:text ="${#authentication.getPrincipal().getUser().getUsername()}"></span>
     <footer class="page-footer dark">
         <div class="footer-copyright">
             <p>© 2021 Copyright Text</p>
