--- a/src/main/resources/templates/frog/order_detail.html
+++ b/src/main/resources/templates/frog/order_detail.html
@@ -63,7 +63,7 @@
                         <div class="form-group">
                                 <label class="col-sm-2 col-form-label">Time:</label>
                                 <div class="col-sm-10">
-                                        <input th:field="*{time}" type="text" class="form-control"/>
+                                        <input th:field="*{time}" type="text" class="form-control" placeholder="mm/dd/yyyy" />
                                 </div>
                         </div>
 
