--- a/src/main/resources/templates/frog/signup.html
+++ b/src/main/resources/templates/frog/signup.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html>
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title style="text-align: center">Please sign in</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Register</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous"/>
+
 </head>
+
 <body >
 <div class="container" text-align = "center">
     <h2 class="form-signin-heading">Register Here</h2>
-    
-    <form class="form-signin" th:action="@{/login}" method="post">
-        
-        <p>
-            <label for="email" >Email</label>
-            <input type="email" id="email" name="email" class="form-control" placeholder="Email" required
-                   autofocus>
-        </p>
 
-        <p>
-            <label for="phone" >Phone Number</label>
-            <input type="tel" id="phone" name="phone" class="form-control" placeholder="Phone Number" required
-                   autofocus>
-        </p>
+    <form class="form-signin" th:action="@{/signup/process_register}" method="post" th:object="${user}">
+        <div class="form-group row">
 
-        <p>
-            <label for="username" >Username</label>
-            <input type="text" id="username" name="username" class="form-control" placeholder="Username" required
-                   autofocus>
-        </p>
-
-        <p>
-            <label for="password" >Password</label>
-            <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-        </p>
+                <input class="form-control form-control-user" type="email" th:field="*{email}" required  placeholder="Email Address" >
 
 
-        <input name="_csrf" type="hidden" value="08a9e14e-6883-4669-a96c-fbe70564f9a7"/>
+        </div>
+        <div class="form-group row">
+
+                <input class="form-control form-control-user" type="text" th:field="*{username}" required  placeholder="Username" >
+
+        </div>
+        <div class="form-group row">
+
+                <input class="form-control form-control-user" type="text" th:field="*{firstname}" required placeholder="First Name" >
+            </div>
+
+            <div class="form-group row">
+                <input class="form-control form-control-user" type="text" th:field="*{lastname}" required placeholder="Last Name" >
+            </div>
+
+
+        <div class="form-group row">
+
+                <input class="form-control form-control-user" type="password" th:field="*{password}" required placeholder="Password">
+
+
+        </div>
+        <button class="btn btn-primary btn-block text-white btn-user" type="submit" >Register Account</button>
 
     </form>
-    <div class="text-center">
-        <a class="d-block small mt-3" th:href="@{/login}">Register an Account</a>
 
-    </div>
 </div>
+<script src="/js/jquery.min.js"></script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/js/fullcalendar/main.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
+<script src="/js/theme.js"></script>
 </body>
+
 </html>
