--- a/src/main/resources/templates/frog/signup.html
+++ b/src/main/resources/templates/frog/signup.html
@@ -15,7 +15,7 @@
 <div class="container" text-align = "center">
     <h2 class="form-signin-heading">Register Here</h2>
 
-    <form class="form-signin" th:action="@{/signup/process_register}" method="post" th:object="${user}">
+    <form class="form-signin" th:action="@{/signup/success}" method="post" th:object="${user}">
         <div class="form-group row">
 
                 <input class="form-control form-control-user" type="email" th:field="*{email}" required  placeholder="Email Address" >
