User CRUD complete

--- a/src/main/resources/templates/frog/home.html
+++ b/src/main/resources/templates/frog/home.html
@@ -16,12 +16,21 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <div class="container"><a class="navbar-brand logo" href="#">TCU SuperFrogs</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="/home">TCU SuperFrogs</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse d-flex flex-row-reverse bd-highlight" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="hasAuthority('user')" th:href="@{/user}">User Detail</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="hasAuthority('frog')" th:href="@{/user}">User Detail</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="hasAuthority('admin')" th:href="@{/user/list}">View User</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{frog/new}">Schedule an Event</a>
                 </li>
@@ -36,6 +45,9 @@
                 </li>
                 <li class="nav-item" >
                     <a class="nav-link" sec:authorize="hasAuthority('frog')" href="#">Role: Frog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Log out</a>
                 </li>
             </ul>
         </div>
