--- a/src/main/resources/templates/frog/home_nologin.html
+++ b/src/main/resources/templates/frog/home_nologin.html
@@ -25,6 +25,9 @@
                     <li class="nav-item">
                         <a class="nav-link" th:href="@{/login}">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/signup}">Register</a>
+                    </li>
                 </ul>
             </div>
         </div>
