--- a/src/main/resources/templates/frog/list.html
+++ b/src/main/resources/templates/frog/list.html
@@ -68,7 +68,7 @@
 </form>
 
     <p>
-        <a class="btn btn-secondary" href="../home.html" th:href="@{/}">Return to home</a>
+        <a class="btn btn-secondary" href="../home.html" th:href="@{/home}">Return to home</a>
     </p>
 </div>
 
