--- a/src/main/resources/templates/frog/user.html
+++ b/src/main/resources/templates/frog/user.html
@@ -66,7 +66,7 @@
             </div>
 
             <div sec:authorize="hasAuthority('admin')">
-                <a class="btn btn-secondary" href="../home.html" th:href="@{/user/list}">Return to List</a>
+                <a class="btn btn-secondary" href="../home.html" th:href="@{/users/list}">Return to List</a>
             </div>
         </div>
     </div>
