--- a/src/main/resources/templates/frog/order.html
+++ b/src/main/resources/templates/frog/order.html
@@ -60,6 +60,9 @@
                     </div>
                 </div>
             </form>
+            <div>
+                <a class="btn btn-secondary" href="../home.html" th:href="@{/frog/list}">Return to List</a>
+            </div>
         </div>
     </div>
 </div>
